Readme added split functionality

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <title>Writer's Friend</title>
+    <meta name="description" content="Visual tool for writers.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://writers-friend.herokuapp.com/">
+    <meta property="og:title" content="Writer's Friend">
+    <meta property="og:description" content="Visual tool for writers.">
+    <meta property="og:image" content="https://writers-friend.herokuapp.com/returnTrue.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://writers-friend.herokuapp.com/">
+    <meta property="twitter:title" content="Writer's Friend">
+    <meta property="twitter:description" content="Visual tool for writers.">
+    <meta property="twitter:image" content="https://writers-friend.herokuapp.com/returnTrue.png">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
